--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -7,9 +7,13 @@
 
         <import type="sgtmelon.handynotes.Help.Time" />
 
-        <import type="android.text.TextUtils" />
+        <import
+            alias="text"
+            type="android.text.TextUtils" />
 
-        <import type="android.view.View" />
+        <import
+            alias="v"
+            type="android.view.View" />
 
         <variable
             name="itemNote"
@@ -49,7 +53,7 @@
                     android:text='@{itemNote.name}'
                     android:textColor="@color/colorDark"
                     android:textSize="@dimen/text_big_size"
-                    android:visibility='@{TextUtils.isEmpty(itemNote.name) ? View.GONE : View.VISIBLE}' />
+                    android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
 
                 <TextView
                     android:id="@+id/itemNote_tv_text"
@@ -75,7 +79,7 @@
                         android:layout_marginEnd="@dimen/item_layout_small_indent"
                         android:layout_marginRight="@dimen/item_layout_small_indent"
                         android:tint="@color/colorDark"
-                        android:visibility='@{itemNote.rankId.length == 0 ? View.GONE : View.VISIBLE}'
+                        android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
                         app:srcCompat="@drawable/ic_menu_rank" />
 
                     <ImageView
@@ -86,7 +90,7 @@
                         android:layout_marginEnd="@dimen/item_layout_small_indent"
                         android:layout_marginRight="@dimen/item_layout_small_indent"
                         android:tint="@color/colorDark"
-                        android:visibility='@{itemNote.status ? View.VISIBLE : View.GONE}'
+                        android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
                         app:srcCompat="@drawable/ic_menu_bind_text" />
 
                     <TextView
