--- a/app/src/main/res/values/app_values.xml
+++ b/app/src/main/res/values/app_values.xml
@@ -4,14 +4,13 @@
     <!-- Text length -->
     <integer name="length_max_note_name">30</integer>
     <integer name="length_max_rank_name">30</integer>
-    <integer name="length_max_search_text">50</integer>
 
     <!-- Drawable part name -->
-    <string name="drawable_group_strike_path">group_strike_path</string>
-    <string name="drawable_strike_path">strike_path</string>
-    <string name="drawable_group_strike_mask">group_strike_mask</string>
-    <string name="drawable_strike_mask">strike_mask</string>
-    <string name="drawable_group_eye_path">group_eye_path</string>
-    <string name="drawable_eye_path">eye_path</string>
+    <string name="drawable_group_strike_path" translatable="false">group_strike_path</string>
+    <string name="drawable_strike_path" translatable="false">strike_path</string>
+    <string name="drawable_group_strike_mask" translatable="false">group_strike_mask</string>
+    <string name="drawable_strike_mask" translatable="false">strike_mask</string>
+    <string name="drawable_group_eye_path" translatable="false">group_eye_path</string>
+    <string name="drawable_eye_path" translatable="false">eye_path</string>
 
 </resources>
