--- a/app/src/main/res/layout/frg_n_roll.xml
+++ b/app/src/main/res/layout/frg_n_roll.xml
@@ -16,6 +16,10 @@
             name="keyEdit"
             type="boolean" />
 
+        <variable
+            name="keyCreate"
+            type="boolean" />
+
     </data>
 
     <LinearLayout
@@ -27,6 +31,7 @@
         <include
             layout="@layout/inc_toolbar_note"
             app:itemNote='@{itemNote}'
+            app:keyCreate='@{keyCreate}'
             app:keyEdit='@{keyEdit}' />
 
         <android.support.v7.widget.RecyclerView
