--- a/app/src/main/res/layout/inc_toolbar_note.xml
+++ b/app/src/main/res/layout/inc_toolbar_note.xml
@@ -16,6 +16,10 @@
             name="keyEdit"
             type="boolean" />
 
+        <variable
+            name="keyCreate"
+            type="boolean" />
+
     </data>
 
     <android.support.design.widget.AppBarLayout
@@ -33,6 +37,7 @@
             app:contentInsetLeft="@dimen/item_layout_medium_indent"
             app:contentInsetRight="@dimen/item_layout_medium_indent"
             app:contentInsetStart="@dimen/item_layout_medium_indent"
+            app:navigationIcon='@{keyEdit &amp;&amp; !keyCreate ? @drawable/ic_button_cancel : @drawable/ic_menu_arrow_back}'
             app:popupTheme="@style/AppTheme.AppBarTheme">
 
             <FrameLayout
