--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -17,7 +17,7 @@
 
         <variable
             name="itemNote"
-            type="sgtmelon.handynotes.app.model.item.ItemNote" />
+            type="sgtmelon.handynotes.db.item.ItemNote" />
 
     </data>
 
