--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="itemRank"
-            type="sgtmelon.handynotes.app.model.item.ItemRank" />
+            type="sgtmelon.handynotes.db.item.ItemRank" />
 
     </data>
 
