--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="itemRoll"
-            type="sgtmelon.handynotes.app.model.item.ItemRoll" />
+            type="sgtmelon.handynotes.db.item.ItemRoll" />
 
         <variable
             name="keyBin"
