--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="itemSort"
-            type="sgtmelon.handynotes.app.model.item.ItemSort" />
+            type="sgtmelon.handynotes.office.item.ItemSort" />
 
         <variable
             name="position"
