--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="itemRoll"
-            type="sgtmelon.handynotes.db.item.ItemRoll" />
+            type="sgtmelon.handynotes.app.model.item.ItemRoll" />
 
     </data>
 
