Рабочий репозиторий для заметки Внедрил его в окно заметки Начал переименовывать переменные

--- a/app/src/main/res/layout/frg_text.xml
+++ b/app/src/main/res/layout/frg_text.xml
@@ -67,6 +67,7 @@
                     android:background="@android:color/transparent"
                     android:gravity="top"
                     android:hint="@string/hint_enter_text"
+                    android:linksClickable="true"
                     android:padding="@dimen/item_layout_medium_indent"
                     android:text='@{itemNote.text}'
                     android:textIsSelectable="true"
