--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -34,7 +34,7 @@
                 android:padding="@dimen/item_layout_medium_indent"
                 android:weightSum="1">
 
-                <sgtmelon.handynotes.view.ButtonVisible
+                <sgtmelon.handynotes.app.view.ButtonVisible
                     android:id="@+id/itemRank_bv_visible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
