--- a/app/src/main/res/values-ru/app_strings.xml
+++ b/app/src/main/res/values-ru/app_strings.xml
@@ -88,6 +88,26 @@
         <item>Список</item>
     </string-array>
 
+    <string-array name="dialog_menu_text">
+        <item />
+        <item>@string/dialog_menu_convert_to_roll</item>
+        <item>@string/dialog_menu_copy</item>
+        <item>@string/dialog_menu_delete</item>
+    </string-array>
+
+    <string-array name="dialog_menu_roll">
+        <item />
+        <item />
+        <item>@string/dialog_menu_convert_to_text</item>
+        <item>@string/dialog_menu_copy</item>
+        <item>@string/dialog_menu_delete</item>
+    </string-array>
+
+    <string-array name="dialog_menu_bin">
+        <item>@string/dialog_menu_restore</item>
+        <item>@string/dialog_menu_copy</item>
+        <item>@string/dialog_menu_clear</item>
+    </string-array>
 
     <!-- Toast -->
     <string name="toast_text_copy">Текст скопирован в буфер обмена</string>
