--- a/app/src/main/res/layout/frg_bin.xml
+++ b/app/src/main/res/layout/frg_bin.xml
@@ -38,6 +38,7 @@
                 <ImageView
                     android:layout_width="@dimen/icon_logo_size"
                     android:layout_height="@dimen/icon_logo_size"
+                    android:contentDescription="@null"
                     android:tint="@color/colorDarkSecond"
                     app:srcCompat="@drawable/ic_menu_bin" />
 
