--- a/app/src/main/res/layout/frg_notes.xml
+++ b/app/src/main/res/layout/frg_notes.xml
@@ -39,6 +39,7 @@
                     android:layout_width="@dimen/icon_logo_size"
                     android:layout_height="@dimen/icon_logo_size"
                     android:tint="@color/colorDarkSecond"
+                    android:contentDescription="@null"
                     app:srcCompat="@drawable/ic_menu_note" />
 
                 <TextView
