--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -46,6 +46,7 @@
                     android:id="@+id/itemRoll_iv_click"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:contentDescription="@null"
                     android:background="?attr/selectableItemBackground"
                     android:visibility='@{keyBin ? v.INVISIBLE : v.VISIBLE}' />
 
