--- a/app/src/main/res/layout-v21/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_rank.xml
@@ -33,8 +33,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:layout_marginStart="@dimen/item_layout_small_indent"
-                    android:padding="@dimen/item_layout_medium_indent"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@null"
+                    android:padding="@dimen/item_layout_medium_indent"
                     app:srcCompat="@drawable/ic_button_cancel" />
 
                 <EditText
@@ -63,6 +64,7 @@
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:layout_marginStart="@dimen/item_layout_small_indent"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@null"
                     android:padding="@dimen/item_layout_medium_indent"
                     app:srcCompat="@drawable/ic_menu_rank" />
 
