--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -78,6 +78,7 @@
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/item_layout_small_indent"
                         android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:contentDescription="@null"
                         android:tint="@color/colorDark"
                         android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
                         app:srcCompat="@drawable/ic_menu_rank" />
@@ -89,6 +90,7 @@
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/item_layout_small_indent"
                         android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:contentDescription="@null"
                         android:tint="@color/colorDark"
                         android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
                         app:srcCompat="@drawable/ic_menu_bind_text" />
