--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -114,6 +114,7 @@
                     android:layout_marginStart="@dimen/item_layout_medium_indent"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:padding="@dimen/item_layout_medium_indent"
+                    android:contentDescription="@null"
                     android:tint="@color/colorDark"
                     app:srcCompat="@drawable/ic_button_cancel" />
 
