--- a/app/src/main/res/layout/frg_bin.xml
+++ b/app/src/main/res/layout/frg_bin.xml
@@ -53,7 +53,7 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/frgBin_rv"
                 style="@style/RecyclerView"
                 android:layout_width="match_parent"
