--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -34,7 +34,7 @@
             app:keyCreate='@{keyCreate}'
             app:keyEdit='@{keyEdit}' />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/frgRoll_rv"
             style="@style/RecyclerView"
             android:layout_width="match_parent"
